day17/project1/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: ashu-project1
spec: {}
status: {}
