day17/project1/db_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ashu-mysqldb
  name: ashu-mysqldb
  namespace: ashu-project1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ashu-mysqldb
  strategy: {}
  template: # for creating pod 
    metadata:
      creationTimestamp: null
      labels: # label of pod 
        app: ashu-mysqldb
    spec:
      volumes: 
      - name: ashudb-vol1
        hostPath:
          path: /ashu-project1
          type: DirectoryOrCreate 
      containers:
      - image: mysql
        name: mysql
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - name: ashudb-vol1
          mountPath: /var/lib/mysql/
status: {}
