day17/project1/nodeport_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ashu-ui-lb
  name: ashu-ui-lb
  namespace: ashu-project1
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector: # pod finder using label of pod 
    app: ashu-web
  type: NodePort
status:
  loadBalancer: {}
