day17/project1/ashu-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ashu-ingress
  namespace: ashu-project1 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ashu-project1.ashutoshh.in 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ashu-ui-lb2
            port:
              number: 8080
